--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Thomas' Page</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<a href="skilltest/skilltest.html">skilltest</a>
+	<a class= "one" href="skilltest/skilltest.html">Skilltest</a>
 
 </body>
 </html>
