--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<a class= "one" href="skilltest/skilltest.html">Skilltest</a>
+	<a class= "two" href="embeddedcontent/embeddedcontent.html">EmbeddedContent</a>
 
 </body>
 </html>
