--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<a class= "one" href="skilltest/skilltest.html">Skilltest</a>
 	<a class= "two" href="embeddedcontent/embeddedcontent.html">EmbeddedContent</a>
-
+	<a class= "three" href="translatingprintedmedia/translatingprintedmedia.html" > Translating Printed Media to Web Format 
+	</a>
 </body>
 </html>
