--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<a class= "two" href="embeddedcontent/embeddedcontent.html">EmbeddedContent</a>
 	<a class= "three" href="translatingprintedmedia/translatingprintedmedia.html" > Translating Printed Media to Web Format 
 	</a>
+	<a class="four" href="multimediastory/multimediastory.html"> MultimediaStory</a>
 </body>
 </html>
