--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 	</a>
 	<a class="four" href="multimediastory/multimediastory.html"> MultimediaStory</a>
 	<a class="five" href="mediaqueries_css/index.html">mediaqueriesandcssanimation</a>
+	<a class="six" href="digitalzine/index.html"> Digital Zine</a>
 </body>
 </html>
