--- a/digitalzine/index.html
+++ b/digitalzine/index.html
@@ -16,8 +16,8 @@
 		<div class="box1">Book Display:</div>
 		<div class="box2"><img src="5.png" class="img5"></div>
 		<div class="box3">
-				<div class="box3-1">Photography in Context <img src="7.jpg" class="jpg1"></div>
-				<div class="adjust"><img src="8.jpg" class="jpg2"></div>
+				<div class="box3-1">Photography in Context <img src="7.png" class="jpg1"></div>
+				<div class="adjust"><img src="8.png" class="jpg2"></div>
 				<div><img src="9.jpg" class="jpg3"></div>
 				<div><img src="10.jpg" class="jpg4"></div>
 
