--- a/digitalzine/index.html
+++ b/digitalzine/index.html
@@ -18,8 +18,8 @@
 		<div class="box3">
 				<div class="box3-1">Photography in Context <img src="7.png" class="jpg1"></div>
 				<div class="adjust"><img src="8.png" class="jpg2"></div>
-				<div><img src="9.jpg" class="jpg3"></div>
-				<div><img src="10.jpg" class="jpg4"></div>
+				<div><img src="9.png" class="jpg3"></div>
+				<div><img src="10.png" class="jpg4"></div>
 
 
 
@@ -28,10 +28,10 @@
 		<div class="box4"><img src="3.png" class="img3"></div>
 		<div class="box5"><img src="2.png" class="img2"></div>
 		<div class="box6">
-			<div class="box6-1"><img src="11.jpg" class="jpg5"></div>
-			<div><img src="12.jpg" class="jpg6"></div>
-			<div><img src="13.jpg" class="jpg7"></div>
-			<div><img src="14.jpg" class="jpg8"></div>
+			<div class="box6-1"><img src="11.png" class="jpg5"></div>
+			<div><img src="12.png" class="jpg6"></div>
+			<div><img src="13.png" class="jpg7"></div>
+			<div><img src="14.png" class="jpg8"></div>
 		</div>
 		<div class="box7"><img src="6.png" class="img6"></div>
 		<div class="box8"><img src="4.png" class="img4"></div>
