--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>home</title>
-  <link rel="stylesheet" href="index.css">
-  <script src="index.js"></script>
+  <link rel="stylesheet" href="mainpage.css">
+  <script src="mainpage.js"></script>
 </head>
 <body class="font">
 
@@ -15,7 +15,7 @@
   </div>
 
   <div class="link">
-    <a href="index.html">Ruturn</a>
+    <a href="../index.html">Ruturn</a>
   </div>
 </header>
 
@@ -23,7 +23,7 @@
   <div class="r1-1 hv">
     <figure>
       <a href="../skilltest/skilltest.html">
-        <img src="../indeximage/7.png" alt="" class="Installation">
+        <img src="../mainpageimage/7.png" alt="" class="Installation">
       </a>
       <figcaption>01</figcaption>
     </figure>
@@ -31,7 +31,7 @@
   <div class="r1-2 hv">
     <figure>
       <a href="../embeddedcontent/embeddedcontent.html">
-        <img src="../indeximage/8.png" alt=""class="fashion">
+        <img src="../mainpageimage/8.png" alt=""class="fashion">
       </a>
       
       <figcaption>02</figcaption>
@@ -40,7 +40,7 @@
   <div class="r1-3 hv">
     <figure>
       <a href="../translatingprintedmedia/translatingprintedmedia.html">
-        <img src="../indeximage/9.png" alt="" class="PHOTOGRAPHY" >
+        <img src="../mainpageimage/9.png" alt="" class="PHOTOGRAPHY" >
       </a>
       <figcaption>03</figcaption>
     </figure>
@@ -50,7 +50,7 @@
     <div class="r2-1 hv">
       <figure>
         <a href="../multimediastory/multimediastory.html">
-        <img src="../indeximage/10.png" alt="" class="video" >
+        <img src="../mainpageimage/10.png" alt="" class="video" >
       </a>
         <figcaption>04</figcaption>
       </figure>
@@ -58,7 +58,7 @@
     <div class="r2-2 hv">
       <figure>
         <a href="../mediaqueries_css/index.html">
-        <img src="../indeximage/11.png" alt="" class="bookdesign" >
+        <img src="../mainpageimage/11.png" alt="" class="bookdesign" >
       </a>
         <figcaption>05</figcaption>
       </figure>
@@ -69,7 +69,7 @@
   <div class="r3-1 hv">
     <figure>
       <a href="../digitalzine/index.html">
-        <img src="../indeximage/12.png" alt="" class="handcraft">
+        <img src="../mainpageimage/12.png" alt="" class="handcraft">
       </a>
       <figcaption>06</figcaption>
     </figure>
