--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 
 	<title>Landing Page</title>
-	<link rel="stylesheet" type="text/css" href="index0.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 
 
 <div class="container">
 	<div class="center"> 
-<button> <a href="index/index.html"> INTERACTION LAB</button></a>
+<button> <a href="mainpage/mainpage.html"> INTERACTION LAB</button></a>
 <button> <a href="index/"> STUDIO</button></a>
 	</div>
 </div>
