--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 	<div class="center"> 
 <button> <a href="mainpage/mainpage.html"> INTERACTION LAB</button></a>
-<button> <a href="index/"> STUDIO</button></a>
+<button> <a href="studiopage/studio.html"> STUDIO</button></a>
 	</div>
 </div>
 
