--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -22,7 +22,7 @@
 <main class="main">
   <div class="r1-1 hv">
     <figure>
-      <a href="../skilltest/skilltest.html">
+      <a href="../skilltest/skilltest.html" target="_blank">
         <img src="../mainpageimage/7.png" alt="" class="Installation">
       </a>
       <figcaption>01</figcaption>
@@ -30,7 +30,7 @@
   </div>
   <div class="r1-2 hv">
     <figure>
-      <a href="../embeddedcontent/embeddedcontent.html">
+      <a href="../embeddedcontent/embeddedcontent.html" target="_blank">
         <img src="../mainpageimage/8.png" alt=""class="fashion">
       </a>
       
@@ -39,7 +39,7 @@
   </div>
   <div class="r1-3 hv">
     <figure>
-      <a href="../translatingprintedmedia/translatingprintedmedia.html">
+      <a href="../translatingprintedmedia/translatingprintedmedia.html" target="_blank">
         <img src="../mainpageimage/9.png" alt="" class="PHOTOGRAPHY" >
       </a>
       <figcaption>03</figcaption>
@@ -49,7 +49,7 @@
   <div class="r2">
     <div class="r2-1 hv">
       <figure>
-        <a href="../multimediastory/multimediastory.html">
+        <a href="../multimediastory/multimediastory.html" target="_blank">
         <img src="../mainpageimage/10.png" alt="" class="video" >
       </a>
         <figcaption>04</figcaption>
@@ -57,7 +57,7 @@
     </div>
     <div class="r2-2 hv">
       <figure>
-        <a href="../mediaqueries_css/index.html">
+        <a href="../mediaqueries_css/index.html" target="_blank">
         <img src="../mainpageimage/11.png" alt="" class="bookdesign" >
       </a>
         <figcaption>05</figcaption>
@@ -68,7 +68,7 @@
 
   <div class="r3-1 hv">
     <figure>
-      <a href="../digitalzine/index.html">
+      <a href="../digitalzine/index.html" target="_blank">
         <img src="../mainpageimage/12.png" alt="" class="handcraft">
       </a>
       <figcaption>06</figcaption>
