--- a/studiopage/studio.html
+++ b/studiopage/studio.html
@@ -21,7 +21,7 @@
 <main class="main">
   <div class="r1-1 hv">
     <figure>
-      <a href="crossplatformstorytelling.html">
+      <a href="crossplatformstorytelling.html" target="_blank">
         <img src="13.png" alt="" class="Installation">
       </a>
       <figcaption>01</figcaption>
