--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -74,6 +74,15 @@
       <figcaption>06</figcaption>
     </figure>
   </div>
+
+  <div class="r3-2 hv">
+    <figure>
+      <a href="../album.html" target="_blank">
+        <img src="../mainpageimage/13.png" alt="" class="handcraft">
+      </a>
+      <figcaption>07</figcaption>
+    </figure>
+  </div>
   
 </main>
 
