--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -84,6 +84,15 @@
     </figure>
   </div>
   
+
+  <div class="r3-3 hv">
+    <figure>
+      <a href="../recipes/index.html" target="_blank">
+        <img src="../mainpageimage/16.png" alt="" class="handcraft">
+      </a>
+      <figcaption>08</figcaption>
+    </figure>
+  </div>
 </main>
 
 </body>
